[package]
name = "conc"
version = "0.1.0"
edition = "2021"

[dependencies]
num_enum = "0.7.1"
anyhow = "1.0.75"
num = "0.4.1"
pest = "2.7.5"
pest_derive = "2.6"
uuid = { version = "1.6.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]}